--- a/snack-2/index.html
+++ b/snack-2/index.html
@@ -13,11 +13,15 @@
 <body>
     <div id="app">
         <main>
-            <ul class="text-center mt-3 mb-3" v-if="(listName.length == 10 )" >
+            <input class="mt-3 mb-3" type="text"  v-model="nameUser" @key>
+            <ul class="text-center mt-3 mb-3" v-if="(listName.includes(nameUser))">
                 <li class="" v-for="name in listName">
                     {{ name }}
                 </li>
             </ul>
+            <p>
+                accesso negato 
+            </p>
         </main>
 
     </div>
