--- a/snack-1/index.html
+++ b/snack-1/index.html
@@ -13,17 +13,20 @@
 </head>
 <body>
     <div id="app">
-        <main>
-            <a href="#" class="btn btn-success mt-3 ms-3"> Clicca per generare numeri </a>
+        <main class="d-flex">
+            <div>
+                <a href="#" @click="generatorNumber()" class="btn btn-success mt-3 ms-3"> Clicca per generare numeri </a>
+
+            </div>
            
             <ul>
-                <li v-for="number in oddNumbers">
-
+                <li class="bg-danger text-light" v-for="number in numbersEven">
+                    {{ number }}
                 </li>
             </ul>
             <ul>
-                <li v-for="number in oddNumber">
-                    
+                <li class="bg-success text-light" v-for="number in numbersOdd">
+                    {{ number }}
                 </li>
             </ul>
         </main>
