--- a/snack-1/index.html
+++ b/snack-1/index.html
@@ -20,12 +20,12 @@
             </div>
            
             <ul>
-                <li class="bg-danger text-light" v-for="number in numbersEven">
+                <li class="text-danger" v-for="number in numbersEven">
                     {{ number }}
                 </li>
             </ul>
             <ul>
-                <li class="bg-success text-light" v-for="number in numbersOdd">
+                <li class="text-success" v-for="number in numbersOdd">
                     {{ number }}
                 </li>
             </ul>
