--- a/snack-2/index.html
+++ b/snack-2/index.html
@@ -13,15 +13,27 @@
 <body>
     <div id="app">
         <main>
-            <input class="mt-3 mb-3" type="text"  v-model="nameUser" @keyup.enter="generatorListEmail()">
-            <ul class="text-center mt-3 mb-3" v-if="(listName.includes(nameUser))">
-                <li class="" v-for="name in listName">
-                    {{ name }}
-                </li>
-            </ul>
-            <p>
-                accesso negato 
-            </p>
+            <div class="row ms-3 mt-3">
+                <div class="col-12">
+                    <input class="mt-3 mb-3" type="text"  v-model="nameUser">
+                    <a href="#" class="btn btn-success" @click="checkGuestAccess(nameUser)"> Clicca per verifica accesso</a>
+                </div>
+            </div>
+            <div class="col-12">
+                <ul class=" mt-3 mb-3">
+                    <li class="" v-for="name in listName">
+                        {{ name }}
+                    </li>
+                </ul>
+            </div>
+            <div class="col-12">
+                <p class="text-danger fs-5" v-if="!userAccess">
+                    Accesso negato
+                </p>
+                <p class="text-success fs-5" v-else >
+                    Benvenuta/o {{ nameUser }} accesso autorizzato 
+                </p>
+            </div>
         </main>
 
     </div>
